--- a/offline.html
+++ b/offline.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div style="height:100vh;display:flex;justify-content:center;align-items:center;">
-        <div style="background-color: cyan; padding:40px 40px;">
-            <p>You are offline please connect to internet.</p>
+        <div style="padding:40px 40px;">
+            <span style="font-size: 40px;">You are offline please connect to internet.</span>
         </div>
     </div>
 </body>
